2020-05-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-book and subclasses: Clean up #includes

	* libbalsa/address-book-extern.c:
	* libbalsa/address-book-extern.h:
	* libbalsa/address-book-gpe.c:
	* libbalsa/address-book-gpe.h:
	* libbalsa/address-book-ldap.c:
	* libbalsa/address-book-ldap.h:
	* libbalsa/address-book-ldif.c:
	* libbalsa/address-book-osmo.c:
	* libbalsa/address-book-osmo.h:
	* libbalsa/address-book-rubrica.c:
	* libbalsa/address-book-text.c:
	* libbalsa/address-book-text.h:
	* libbalsa/address-book-vcard.c:
	* libbalsa/address-book.c:

2020-05-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	compose window: BalsaSendmsg:ident may be destroyed while the
	compose window is open, and the only way we can know is if it
	is removed from BalsaApplication:indenties

	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler): check if
	BalsaSendmsg:ident can be found in BalsaApplication:indenties.

2020-05-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Bump required versions as discussed in
	https://mail.gnome.org/archives/balsa-list/2020-May/msg00010.html
	and remove corresponding conditional compilation directives.

	* configure.ac:
	* libbalsa/html.c (lbh_web_process_terminated_cb),
	(lbh_web_view_new):
	* libbalsa/identity.c (help_ident_cb):
	* libbalsa/mime.c (is_in_url):
	* libbalsa/misc.c (libbalsa_font_string_to_css):
	* libbalsa/smtp-server.c (smtp_server_response):
	* meson.build:
	* src/address-book-config.c (help_button_cb):
	* src/balsa-index.c (bndx_do_popup):
	* src/balsa-mblist.c (bmbl_do_popup):
	* src/balsa-message.c (balsa_headers_attachments_popup),
	(tree_mult_selection_popup), (tree_button_press_cb):
	* src/balsa-mime-widget-image.c (balsa_image_button_press_cb):
	* src/balsa-mime-widget-message.c (extbody_call_url):
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(handle_url):
	* src/filter-edit-callbacks.c (condition_dialog_response),
	(fe_dialog_response):