@@ -1,3 +1,12 @@
+2020-05-23  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	address-view: Stop using direct access to GdkEvent structs
+
+	Use GdkEvent getters instead of directly accessing fields.
+
+	* libbalsa/address-view.c (lbav_key_pressed_cb),
+	(lbav_selection_changed_cb):
+
 2020-05-21  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	address-book and subclasses: Clean up #includes
